[gd_scene load_steps=2 format=3 uid="uid://bn5g8liarwdwg"]

[ext_resource type="Script" uid="uid://bkkcsgumtf07b" path="res://testing/file_dialog_test.gd" id="1_6ybqr"]

[node name="FileDialogTest" type="Node2D"]
script = ExtResource("1_6ybqr")

[node name="FileDialog" type="FileDialog" parent="."]

[connection signal="canceled" from="FileDialog" to="." method="_on_file_dialog_canceled"]
[connection signal="confirmed" from="FileDialog" to="." method="_on_file_dialog_confirmed"]
[connection signal="custom_action" from="FileDialog" to="." method="_on_file_dialog_custom_action"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
